removed js from html

--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@
 
 <!-- partial -->
 
-<script src="./CustomEase3.min.js"></script>
+<!--<script src="./CustomEase3.min.js"></script>
 <script src="./CustomWiggle3.min.js"></script>
-<script src="./gsap.min.js"></script>
+<script src="./gsap.min.js"></script> -->
 <script  src="./script.js"></script>
 <script  src="./scriptAnim.js"></script>
 </body>
