--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Me?</title>
+  <title>SPAStopia</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./styleAnim.css">
   <link rel="stylesheet" href="./styleRadial.css">
