--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 </div>
 <div class="circle-menu">
 	<ul>
-		<li><a class="spiritual" href="#">CV</a></li> <!-- Spiritual - CV -->
+		<li><a class="spiritual" href="https://drive.google.com/file/d/1NX0JHg_nljJipFoewVq1UxUp3O1RFxfE/view?usp=sharing">CV</a></li> <!-- Spiritual - CV -->
 		<li><a class="occupational" href="#">Skills</a></li> <!-- Occupational - Skills -->
 		<li><a class="emotional" href="#">Projects</a></li> <!-- Emotional - Projects -->
 		<li><a class="environmental" href="#">Interests</a></li> <!-- Environmental - Interests -->
