Updated index and projects

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                     </div>
                     <div class="tab-contents" id="expereince">
                         <ul>
-                            <li>WIP</li>
+                            <li><span>2021 - Current</span><br>UI/UX Design Training At ET Institute</li>
+                            <li><span>2019 - 2021</span><br>Team Lead at StarApp LLC.</li>
+                            <li><span>2017 - 2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
+                            <li><span>2016 - 2017</span><br>Internship at ekart eCommerce</li>
                         </ul>
                         <a href="#" class="btn">Look at my Projects</a>
                     </div>
@@ -110,6 +113,197 @@
     <div id="topics_of_interest">
         <div class="container">
             <h1 class="sub-title">Topics of Interest</h1>
+            <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=latin,latin-ext' rel='stylesheet' type='text/css'> 
+            <svg
+            width=auto
+            height="78.717201mm"
+            viewBox="0 0 199.3336 78.717201"
+            version="1.1"
+            id="svg1"
+            inkscape:version="1.3 (0e150ed6c4, 2023-07-21)"
+            sodipodi:docname="TOPICS_OF_INTEREST_plain.svg"
+            inkscape:dataloss="true"
+            xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+            xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:svg="http://www.w3.org/2000/svg">
+           <sodipodi:namedview
+              id="namedview1"
+              pagecolor="#ffffff"
+              bordercolor="#000000"
+              borderopacity="0.25"
+              inkscape:showpageshadow="2"
+              inkscape:pageopacity="0.0"
+              inkscape:pagecheckerboard="0"
+              inkscape:deskcolor="#d1d1d1"
+              inkscape:document-units="mm"
+              inkscape:zoom="1.1260382"
+              inkscape:cx="396.96701"
+              inkscape:cy="560.81581"
+              inkscape:window-width="2328"
+              inkscape:window-height="1433"
+              inkscape:window-x="-11"
+              inkscape:window-y="-11"
+              inkscape:window-maximized="1"
+              inkscape:current-layer="layer2" />
+           <defs
+              id="defs1">
+             <rect
+                x="99.463768"
+                y="341.01865"
+                width="757.52319"
+                height="102.12798"
+                id="rect7" />
+             <rect
+                x="111.89674"
+                y="409.39999"
+                width="633.19348"
+                height="165.18089"
+                id="rect1" />
+           </defs>
+           <g
+              inkscape:groupmode="layer"
+              id="layer2"
+              inkscape:label="Layer 2"
+              style="display:none"
+              transform="translate(-7.608339,-98.485875)">
+             <rect
+                style="fill:#151e29;fill-opacity:1;stroke-width:0.264583"
+                id="rect13"
+                width="205.59732"
+                height="129.23259"
+                x="2.5846519"
+                y="67.435921" />
+           </g>
+           <g
+              inkscape:label="Layer 1"
+              inkscape:groupmode="layer"
+              id="layer1"
+              transform="translate(-7.608339,-98.485875)">
+             <text
+                xml:space="preserve"
+                transform="matrix(0.12084461,0,0,0.12084461,119.70222,76.436588)"
+                id="text1"
+                style="font-size:74.6667px;white-space:pre;shape-inside:url(#rect1);display:inline;fill:#8fffaa;fill-opacity:1"><tspan
+                  x="111.89648"
+                  y="477.52109"
+                  id="tspan8">SPACE SCIENCE</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:10.0767px;fill:#6cd0c4;fill-opacity:1;stroke-width:0.134955"
+                x="81.076691"
+                y="177.05054"
+                id="text2"><tspan
+                  sodipodi:role="line"
+                  id="tspan1"
+                  style="fill:#6cd0c4;fill-opacity:1;stroke-width:0.134955"
+                  x="81.076691"
+                  y="177.05054">SPACE MISSION DESIGN</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:19.7556px;fill:#6cd0c4;fill-opacity:1;stroke-width:0.264583"
+                x="74.25"
+                y="151.78955"
+                id="text3"><tspan
+                  sodipodi:role="line"
+                  id="tspan2"
+                  style="fill:#6cd0c4;fill-opacity:1;stroke-width:0.264583"
+                  x="74.25"
+                  y="151.78955">IONOSPHERE</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:15.1017px;fill:#8fffaa;fill-opacity:1;stroke-width:0.202254"
+                x="6.5636616"
+                y="167.13295"
+                id="text4"><tspan
+                  sodipodi:role="line"
+                  id="tspan3"
+                  style="fill:#8fffaa;fill-opacity:1;stroke-width:0.202254"
+                  x="6.5636616"
+                  y="167.13295">RADIO SCIENCE</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:13.8915px;fill:#ffbb4b;fill-opacity:1;stroke-width:0.186045"
+                x="7.0574665"
+                y="133.58556"
+                id="text5"><tspan
+                  sodipodi:role="line"
+                  id="tspan4"
+                  style="fill:#ffbb4b;fill-opacity:1;stroke-width:0.186045"
+                  x="7.0574665"
+                  y="133.58556">SATELLITE</tspan><tspan
+                  sodipodi:role="line"
+                  style="fill:#ffbb4b;fill-opacity:1;stroke-width:0.186045"
+                  x="7.0574665"
+                  y="150.94994"
+                  id="tspan5">SYSTEMS</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:8.89646px;fill:#ffbb4b;fill-opacity:1;stroke-width:0.119149"
+                x="135.29042"
+                y="164.17229"
+                id="text6"><tspan
+                  sodipodi:role="line"
+                  id="tspan6"
+                  style="fill:#ffbb4b;fill-opacity:1;stroke-width:0.119149"
+                  x="135.29042"
+                  y="164.17229">HELIOPHYSICS</tspan></text>
+             <text
+                xml:space="preserve"
+                transform="matrix(0.09421675,0,0,0.09421675,-2.2333246,136.86235)"
+                id="text7"
+                style="font-size:74.6667px;white-space:pre;shape-inside:url(#rect7);display:inline;fill:#dd81e0;fill-opacity:1"><tspan
+                  x="99.462891"
+                  y="409.14023"
+                  id="tspan13">INSTRUMENTATION</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:13.2785px;fill:#8fffaa;fill-opacity:1;stroke-width:0.177835"
+                x="130.77911"
+                y="108.34101"
+                id="text8"><tspan
+                  sodipodi:role="line"
+                  style="text-align:end;text-anchor:end;fill:#8fffaa;fill-opacity:1;stroke-width:0.177835"
+                  x="130.77911"
+                  y="108.34101"
+                  id="tspan9">REMOTE SENSING</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:9.55592px;text-align:end;text-anchor:end;fill:#6cd0c4;fill-opacity:1;stroke-width:0.127981"
+                x="80.522766"
+                y="119.28335"
+                id="text10"><tspan
+                  sodipodi:role="line"
+                  id="tspan10"
+                  style="fill:#6cd0c4;fill-opacity:1;stroke-width:0.127981"
+                  x="80.522766"
+                  y="119.28335">ATMOSPHERES</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:9.20673px;text-align:end;text-anchor:end;fill:#dd81e0;fill-opacity:1;stroke-width:0.123304"
+                x="205.70108"
+                y="108.71506"
+                id="text11"><tspan
+                  sodipodi:role="line"
+                  id="tspan11"
+                  style="fill:#dd81e0;fill-opacity:1;stroke-width:0.123304"
+                  x="205.70108"
+                  y="108.71506">ASTROPHYSICS</tspan></text>
+             <text
+                xml:space="preserve"
+                style="font-size:15.2458px;text-align:end;text-anchor:end;fill:#ffbb4b;fill-opacity:1;stroke-width:0.204184"
+                x="207.15054"
+                y="123.41784"
+                id="text12"><tspan
+                  sodipodi:role="line"
+                  id="tspan12"
+                  style="fill:#ffbb4b;fill-opacity:1;stroke-width:0.204184"
+                  x="207.15054"
+                  y="123.41784">DATA ANALYSIS</tspan></text>
+           </g>
+         </svg>
+         
+
 
             <a href="projects.html#" class="btn">Look at my Projects</a>
         </div>
@@ -120,8 +314,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fas fa-paper-plane"></i>adhityashreyas.p@gmail.com</p>
-                    <p><i class="fas fa-phone-square-alt"></i>+1 720-561-0206</p>
+                    <p style="color: aliceblue;"><i class="fas fa-paper-plane"></i>adhityashreyas.p@gmail.com</p>
+                    <p style="color: aliceblue;"><i class="fas fa-phone-square-alt"></i>+1 720-561-0206</p>
                     <div class="social-icons">
                         <a href="https://www.facebook.com/adhitya.shreyas/"><i class="fab fa-facebook"></i></a>
                         <a href="https://orcid.org/0000-0003-2464-7944"><i class="fab fa-orcid"></i></a>
@@ -137,7 +331,7 @@
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
-                    <span id="msg">hello</span>
+                    <!--<span id="msg">hello</span>-->
                 </div>
             </div>
         </div>
