--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@
                 <!-- Project 5: Mars-->
                 <li class="fullwidth-hover">
                     <div class="image-wrapper"><img src="images/icon/Mars_Express_pillars.png" alt="Mars Express MARSIS data analysis" style="width: 60%; height: auto;"></div>
-                    <h2 style="text-align: center;">MARS EXPRESS</h2>
+                    <h2 style="text-align: center;">MARS EXPRESS </h2>
                     <h3>Analysis of Ionospheric data from MARSIS</h3>
                     <button type="button" data-quick-view>View more</button>
                 </li>
@@ -175,23 +175,64 @@
                         </div>
                     </div>
                 </li>
-                <!-- Project 6: Minor Project-->
+                <!-- Project 6: Major Project-->
                 <li class="fullwidth-hover">
-                    <div class="image-wrapper"><img src="images/icon/Mars_Express_pillars.png" alt="Mars Express MARSIS data analysis" style="width: 60%; height: auto;"></div>
-                    <h2 style="text-align: center;">MARS EXPRESS</h2>
-                    <h3>Analysis of Ionospheric data from MARSIS</h3>
+                    <div class="image-wrapper"><img src="images/icon/Srm_logo.png" alt="SRM Institute of Science and Technology Aerodynamics Major Project" style="width: 60%; height: auto;"></div>
+                    <h2 style="text-align: center;">B.TECH MAJOR PROJECT</h2>
+                    <h3>Flow separation control using Vortex Generators on Wing Flap</h3>
                     <button type="button" data-quick-view>View more</button>
                 </li>
                 <li class="fullwidth is-hidden" id="quickview-05">
-                    <h1 style="color: #eeeeee" class="typewrite" data-period="2000" data-type='[ "<u>M</u>ars <u>A</u>dvanced <u>R</u>adar for <u>S</u>ubsurface and <u>I</u>onosphere <u>S</u>ounding" ]'></h1>
+                    <h1 style="color: #eeeeee" class="typewrite" data-period="2000" data-type='[ "FINAL PROJECT: Flow separation control using Vortex Generators on Wing Flap" ]'></h1>
                     <span class="wrap"></span>
                     <div class="image-text-container">
-                        <img src="images/icon/Mars_Express_pillars.png" alt="Mars Subsurface Ionosphere Radar Project" class="image" style="width: auto; height: 20vh;">
+                        <img src="images/icon/Srm_logo.png" alt="Mars Subsurface Ionosphere Radar Project" class="image" style="width: auto; height: 20vh;">
                         <div class="text">
-                            <h3 style="color: #eeeeee; font-weight: 200;"><span class="first-word">Course: </span> ASEN 5245: Radar and Remote Sensing (University of Colorado Boulder)</h3>
-                            <h3 style="color: #eeeeee; font-weight: 200; margin-top: 12px;"><span class="first-word">PROJECT TITLE: </span> Analysis of Ionospheric data from MARSIS</h3>
-                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT DESCRIPTION: </span>Utilized data from MARSIS (Mars Advanced Radar for Subsurface and Ionosphere Sounding) to conduct a comprehensive <a href="docs\RADAR_project_WATERMARK.pdf">analysis</a> of the Martian ionosphere. Generated ionograms and applied the Chapman profile on ionospheric soundings to derive essential parameters contributing to a deeper understanding of Mars' ionospheric characteristics.  </p>
-                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT SKILLS: </span> Ionospheric Sounding, Radar Systems, Signal Processing, Planetary Radio Science</p>
+                            <h3 style="color: #eeeeee; font-weight: 200;"><span class="first-word">PI: </span> Dr. R. Mohamed Arif (SRM Institute of Science and Technology)</h3>
+                            <h3 style="color: #eeeeee; font-weight: 200; margin-top: 12px;"><span class="first-word">PROJECT TITLE: </span> Flow separation control using Vortex Generators on Wing Flap</h3>
+                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT DESCRIPTION: </span>Computationally fabricated an efficient placement of Vortex Generators on Wing Flap for delaying the flow separation. </p>
+                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT SKILLS: </span> Computational Fluid Dynamics, Aerodynamics, Wing Flap Vortex Generators</p>
+                        </div>
+                    </div>
+                </li>
+                <!-- Project 7: Minor Project-->
+                <li class="fullwidth-hover">
+                    <div class="image-wrapper"><img src="images/icon/Srm_logo.png" alt="SRM Institute of Science and Technology Drone Minor Project" style="width: 60%; height: auto;"></div>
+                    <h2 style="text-align: center;">B.TECH MINOR PROJECT</h2>
+                    <h3>Design of Solar Powered High Altitude Pseudo Satellite for Payload Launch Assist</h3>
+                    <button type="button" data-quick-view>View more</button>
+                </li>
+                <li class="fullwidth is-hidden" id="quickview-05">
+                    <h1 style="color: #eeeeee" class="typewrite" data-period="2000" data-type='[ "PRE-FINAL PROJECT: Design of Solar Powered High Altitude Pseudo Satellite for Payload Launch Assist" ]'></h1>
+                    <span class="wrap"></span>
+                    <div class="image-text-container">
+                        <img src="images/icon/Srm_logo.png" alt="Mars Subsurface Ionosphere Radar Project" class="image" style="width: auto; height: 20vh;">
+                        <div class="text">
+                            <h3 style="color: #eeeeee; font-weight: 200;"><span class="first-word">PI: </span> Dr. R. Mohamed Arif (SRM Institute of Science and Technology)</h3>
+                            <h3 style="color: #eeeeee; font-weight: 200; margin-top: 12px;"><span class="first-word">PROJECT TITLE: </span> Design of Solar Powered High Altitude Pseudo Satellite for Payload Launch Assist</h3>
+                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT DESCRIPTION: </span>Design to minimise cost of small satellite launch by enabling re-usability of primary launching mechanism.</p>
+                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT SKILLS: </span> High Altitude Pseudo Satellite, Unmanned Aerial Vehicle, Rideshare</p>
+                        </div>
+                    </div>
+                </li>
+                <!-- Project 8: Minor Project-->
+                <li class="fullwidth-hover">
+                    <div class="image-wrapper"><img src="images/icon/valles_logo.png" alt="Valles Marineris Space Mission Design" style="width: 100%; height: auto; margin-top: 40px;"></div>
+                    <h2 style="text-align: center;">VALLES MARINERIS</h2>
+                    <h3>Space Mission Design - Cubesat and ECLSS Design</h3>
+                    <button type="button" data-quick-view>View more</button>
+                </li>
+                <li class="fullwidth is-hidden" id="quickview-05">
+                    <h1 style="color: #eeeeee" class="typewrite" data-period="2000" data-type='[ "PRE-FINAL PROJECT: Design of Solar Powered High Altitude Pseudo Satellite for Payload Launch Assist" ]'></h1>
+                    <span class="wrap"></span>
+                    <div class="image-text-container">
+                        <img src="images/icon/valles_logo.png" alt="Mars Subsurface Ionosphere Radar Project" class="image" style="width: auto; height: 20vh;">
+                        <div class="text">
+                            <h3 style="color: #eeeeee; font-weight: 200;"><span class="first-word">Project Guide: </span> Dr. Jayakumar Venkatesan (CEO of Valles Marineris)</h3>
+                            <h3 style="color: #eeeeee; font-weight: 200; margin-top: 12px;"><span class="first-word">PROJECT TITLE: </span> Space Mission Design - Cubesat and ECLSS Design</h3>
+                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT DESCRIPTION: </span>Spearheaded the development of a cutting-edge 1.5U CubeSat mission aimed at observing plant growth in microgravity conditions through a novel nutrient gel-based hydroponics system. Played a key role in the design and analysis of the mission, ensuring its feasibility and maximizing its scientific potential. 
+                                                                                                                                                    Designed and engineered an advanced Environmental Control and Life Support System (ECLSS) for a space module tailored to stratospheric missions. Leveraged expertise in space systems engineering and applied creativity to deliver a highly functional and efficient ECLSS solution, ensuring the success of the mission in challenging atmospheric conditions.</p>
+                            <p style="color: #eeeeee; font-weight: 120; margin-top: 12px;"><span class="first-word">PROJECT SKILLS: </span> Space Mission Design, Systems Engineering</p>
                         </div>
                     </div>
                 </li>
@@ -248,7 +289,7 @@
                     </div>
                 </div>
             </div> -->
-            <a href="#" class="btn">I Progress</a>
+            <a href="#" class="btn">In Progress</a>
             <!-- <a href="#" class="btn">See More</a> -->
         </div>
     </div>
@@ -258,8 +299,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fas fa-paper-plane"></i>adhityashreyas.p@gmail.com</p>
-                    <p><i class="fas fa-phone-square-alt"></i>+1 720-561-0206</p>
+                    <p style="color: aliceblue;"><i class="fas fa-paper-plane"></i>adhityashreyas.p@gmail.com</p>
+                    <p style="color: aliceblue;"><i class="fas fa-phone-square-alt"></i>+1 720-561-0206</p>
                     <div class="social-icons">
                       <a href="https://www.facebook.com/adhitya.shreyas/"><i class="fab fa-facebook"></i></a>
                       <a href="https://orcid.org/0000-0003-2464-7944"><i class="fab fa-orcid"></i></a>
@@ -275,7 +316,7 @@
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
-                    <span id="msg">hello</span>
+                    <!--<span id="msg">hello</span>-->
                 </div>
             </div>
         </div>
