--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
                     </div>
                     <div class="tab-contents" id="expereince">
                         <ul>
-                            <li><span>2021 - Current</span><br>UI/UX Design Training At ET Institute</li>
-                            <li><span>2019 - 2021</span><br>Team Lead at StarApp LLC.</li>
-                            <li><span>2017 - 2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
-                            <li><span>2016 - 2017</span><br>Internship at ekart eCommerce</li>
+                            <li><span>In Progress</li>
                         </ul>
                         <a href="#" class="btn">Look at my Projects</a>
                     </div>
