Added some missing website stuff

--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
                     <h1 class="sub-title">About Me</h1>
                     <!-- <p> Graduating from University of Colorado Boulder I am taking with me so many new skills and experience I would have never received if I had just been doing my curriculum. The In this video we will create a personal portfolio website design step by step using HTML CSS and JavaScript. You can use this website to make your online resume or CV. In this website design we will add name, designation of the user. Then we will display the image, skills, work experience and education details. We will also add the list of projects and work portfolio on this website. In the footer of this website we will add contact info and contact form. Your can receive the contact form data on your google sheets.</p> -->
                     <!-- <p> Watching the stars, have you ever wondered why our planet is the way it is in this vast universe? And what is beyond the observable universe? If you have too, then you've found the right person. I am Adhi, as you can see from my "Education" below, I am an Aerospace Engineer but as seen from my Experiences/Projects, I've dabbled a lot in Space Science as well. My interests lie in Space Science, Satellite Mission Design and Remote Sensing. I've worked on two Small Satellite Missions at CU Boulder and more info can be found in my projects page right under this section. I am currently looking for Research Opportunities in Radio Science and Instrumentation to study the Ionosphere.</p> -->
-                    <p style="font-size: 16px;">The vastness of the universe has always captivated me, igniting a passion for unraveling its mysteries. Have you ever gazed at the stars and wondered what lies beyond our observable universe? What makes Earth so special? If you do too, welcome to the club. I'm Adhi and as an Aerospace Engineering student at CU Boulder, I've been able to bridge the gap between engineering and space science. My interest lies in the world of Radio Science and the development of instruments to study the Ionosphere. I've actively honed these interests from my class projects and by participating in two university Small Satellite Missions (details in Projects!).  Currently, I'm eager to leverage my skills and contribute to ongoing research efforts in Radio Science and Ionospheric exploration.</p>
+                    <p style="font-size: 16px;">
+                      The vastness of the universe has always captivated me, igniting a lifelong passion for unraveling its mysteries.
+                      Have you ever gazed at the stars and wondered what lies beyond our observable universe—or what makes Earth so special?
+                      If you do too, welcome to the club.
+                      I'm <strong>Adhi</strong>, an <strong>Aerospace Engineer (M.S., University of Colorado Boulder)</strong> who bridges engineering and space science.
+                      My work focuses on <strong>radio science</strong>, <strong>ionospheric exploration</strong>, and the development of <strong>embedded instruments and flight software</strong> for small satellites.
+                      Having contributed to missions like <strong>MAXWELL</strong> and <strong>SWARM-EX</strong>, I’ve gained hands-on experience in real-time embedded systems, integration, and spacecraft testing.
+                      I’m now seeking opportunities in <strong>industry or research</strong> where I can apply these skills to push space technology forward.
+                    </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('expereince')">Experience</p>
@@ -62,15 +70,26 @@
                             <li><span>Additional Skills</span><br>Linux, GitHub, LASP-HYDRA (XML), Embedded Systems, MS office, Machine Learning</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="expereince">
-                        <ul>
-                            <li><span>In Progress</li>
-                        </ul>
-                        <a href="#" class="btn">Look at my Projects</a>
+                    <div class="tab-contents" id="experience">
+                      <ul>
+                        <li>
+                          <span>Flight Software Engineer – MAXWELL CubeSat (AFRL)</span><br>
+                          Developing and integrating real-time C++ flight software, performing HIL testing, and supporting system-level verification for spacecraft operations.
+                        </li>
+                        <li>
+                          <span>Flight Software Engineer – SWARM-EX CubeSat (NSF)</span><br>
+                          Building embedded C/C++ software on Linux/RTOS for payload–propulsion integration and leading cross-mission software support across subsystems.
+                        </li>
+                        <li>
+                          <span>Instrumentation Test Engineer – CANVAS CubeSat (NSF)</span><br>
+                          Conducting FPGA and instrument validation using Python and logic analyzers to ensure reliable data acquisition and payload performance.
+                        </li>
+                      </ul>
+                      <a href="https://adhitya-spas.github.io/webpage/projects.html#" class="btn">Look at my Projects</a>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>MS Aerospace Engineering Sciences [2022 - Present]</span><br>             University of Colorado Boulder           </li>
+                            <li><span>MS Aerospace Engineering Sciences [2022 - 2024]</span><br>             University of Colorado Boulder           </li>
                             <li><span>B.Tech Aerospace Engineering [2018 - 2022]</span><br>                  SRM Institute of Science and Technology </li>
                             <li><span>Master Diploma in Product Design and Analysis [2018 - 2021]</span><br> CADD Centre Training projects Pvt. Ltd. </li>
                         </ul>
@@ -393,3 +412,4 @@
     <script  src="./scriptAnim.js"></script>
 </body>
 </html>
+
