--- a/projects.html
+++ b/projects.html
@@ -261,37 +261,34 @@
 
     <!-- ---------Portfolio------- -->
     <div id="portfolio">
-        <div class="container">
-            <h1 class="sub-title">Publications & Conferences</h1>
-            <!-- <div class="work-list">
-                <div class="work">
-                    <img src="images/work-1.png">
-                    <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>The app connects you to the talented people in the world. Download the app from the play store.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/work-2.png">
-                    <div class="layer">
-                        <h3>Music App</h3>
-                        <p>The app connects you to the talented people in the world. Download the app from the play store.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/work-3.png">
-                    <div class="layer">
-                        <h3>Online Shopping App</h3>
-                        <p>The app connects you to the talented people in the world. Download the app from the play store.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-            </div> -->
-            <a href="#" class="btn">In Progress</a>
-            <!-- <a href="#" class="btn">See More</a> -->
-        </div>
+      <div class="container">
+        <h1 class="sub-title">Publications & Conferences</h1>
+        <ul class="pub-list">
+          <li><strong>Sripennem, A.</strong>, Peters, S., Marshall, R. <em>Simulating a Combined Active–Passive, Dual-Frequency Radar Reconstruction of Europa’s Ionospheric Profile</em>, <strong>AGU Conference 2025</strong>, New Orleans, LA (Submitted).</li>
+          <li><strong>Sripennem, A.</strong> <em>In-Orbit Reconfigurable Software for Payload Data Computer</em>, <strong>13th Annual AIAA Rocky Mountain Section Technical Symposium</strong>, Colorado Springs, CO, Sept 2025.</li>
+          <li><em>Passive Plasma Burst Detection and Inverse Localization System for Asteroid Surface Activity Monitoring</em>, <strong>International Workshop on Instrumentation for Planetary Missions</strong>, Boulder, CO, Aug 2025.</li>
+          <li><em>Temporal Analysis of Martian Surface Features Using Orbiter Data</em>, <strong>AGU Conference 2024</strong>, Washington, DC, Dec 2024.</li>
+          <li><strong>Boga, P.</strong>, <strong>Sripennem, A.</strong>, Bonsi, A.N. <em>Rotational Curves Decomposition of Spiral Galaxies Using Least-Square Non-Linear Regression</em>, <strong>Indian Journal of Physics</strong>, 97, 2577–2590 (2023). <a href="https://doi.org/10.1007/s12648-023-02655-6" target="_blank">DOI</a></li>
+          <li><em>New Approach into Understanding the Correlation Between Solar Activity and Sunspot Area (SSA)</em>, <strong>73rd International Astronautical Congress</strong>, Paris, Sept 2022.</li>
+          <li><em>Analytical Study of Dark Matter Mass Distribution Around Spiral Galaxies</em>, <strong>International Conference on Convergence of Interdisciplinary Science</strong>, Bangalore, Feb 2022.</li>
+        </ul>
+        <!-- <a href="#" class="btn">Link to Google Scholar</a> -->
+      </div>
+    </div>
+
+    <div id="awards">
+      <div class="container">
+        <h1 class="sub-title">Awards & Activities</h1>
+        <ul class="award-list">
+          <li>Represented <strong>University of Colorado Boulder</strong> at the <strong>38th Annual Small Satellite Conference</strong>, Logan, UT, 2024.</li>
+          <li>Co-supervisor for the design of a <strong>1.5U CubeSat</strong> launched to LEO at SSERD, India, 2022.</li>
+          <li><strong>1st Place</strong> – CAD Design Competition, SRM World Space Week 2021.</li>
+          <li><strong>Best Poster Award</strong> – International Conference on Convergence of Interdisciplinary Science, 2022.</li>
+          <li><strong>Bronze Medal</strong> – TodAérs Space Sustainability Fellowship for Dark Matter Research, 2021.</li>
+          <li><strong>Best of Nation</strong> – Space Systems Engineering, IV WorldSkills Russia University League, 2020.</li>
+          <li>Presented team research at the <strong>Poster Challenge 2020</strong> organized by the Royal Astronomical Society (RAS), UK.</li>
+        </ul>
+      </div>
     </div>
     <!-- ------------contact----------  -->
     <div id="contact">
@@ -511,3 +508,4 @@
     </script>
 </body>
 </html>
+
