--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('expereince')">Experience</p>
+                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
@@ -412,4 +412,5 @@
     <script  src="./scriptAnim.js"></script>
 </body>
 </html>
+
 
